--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,15 @@ h2 {
 background-color: rgb(130, 222, 146);
 }
 
-.navbar {
+.container {
+background-color: rgb(130, 222, 146);
 display: flex; 
+flex-wrap: wrap;
 }
 
-.navbar ul {
+.logo {
     display: flex;
-    flex-wrap: wrap;
-}
-
-.photo {
-    display: flex;
-    flex-wrap: wrap;
+    float: left;
+    size-adjust:-50px;
 
 }
