--- a/css/style.css
+++ b/css/style.css
@@ -5,32 +5,70 @@
 }
 
 .body {
-font-family: Georgia, 'Times New Roman', Times, serif;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+line: height 2px;
+font-size: 16px;
 }
 
-.header {
-    background-color: rgb(130, 222, 146);
-    }
+.logo-name h2 {
+    font-size: small;
+
+}
 
 .container {
-background-color: rgb(130, 222, 146);
 display: flex; 
-flex-wrap: wrap;
+margin: 0 auto;
+padding: 0 30px;
+
+
+}
+
+.navbar .container {
+display:flex;
+justify-content: space-between;
+align-items: center;
+height: 100%;
+background-color:beige;
+
+}
+
+.navbar ul li {
+    margin-left: 20px;
+}
+.navbar ul {
+    display: flex;
+
+}
+
+.navbar a {
+    color: black;
+    margin-right: 100px;
+}
+
+.nav {
+    margin-right: 0px;
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: cornflowerblue;
 }
 .photo {
-    
-   
-
-}
-.h1 {
-    color: rgb(241, 125, 229);
-    text-align: center;
-    font-style: Georgia;
-    text-size-adjust: 100px;
+display: flex;
+flex-wrap: wrap;
+align-content:space-between;
+max-width: 25%;
+margin-right: -30px;
+  
 }
 
-.h2 {
-    color: rgb(241, 125, 229);
-    text-align: center;
-    font-style: Georgia;
+.header h1 {
+font-size: large;
+float: left;    
+}
+.header p {
+    font-size: small;
+    float: left;
 }
