--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 * {
     box-sizing: border-box
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
 }
 
 .body {
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 line: height 2px;
 font-size: 16px;
+display: flex;
 }
 
 .logo-name h2 {
-    font-size: small;
+    font-size: 40px;
 
 }
 
@@ -33,8 +34,11 @@ background-color:beige;
 }
 
 .navbar ul li {
-    margin-left: 20px;
+    margin-left: 0px;
+    display:inline-block;
+    list-style-type: style none;
 }
+
 .navbar ul {
     display: flex;
 
@@ -43,10 +47,16 @@ background-color:beige;
 .navbar a {
     color: black;
     margin-right: 100px;
+    display: flex;
 }
 
 .nav {
     margin-right: 0px;
+    display: flex;
+}
+
+.navbar a:hover {
+    color: cornflowerblue;
 }
 
 .header .container {
@@ -60,15 +70,101 @@ display: flex;
 flex-wrap: wrap;
 align-content:space-between;
 max-width: 25%;
-margin-right: -30px;
-  
+margin-right: -30px; 
 }
 
 .header h1 {
-font-size: large;
-float: left;    
+font-size: 60px;
+float: center;    
 }
-.header p {
-    font-size: small;
-    float: left;
+
+.boxes {
+   display: flex;
+   justify-content: space-between;    
 }
+
+.boxes p {
+    font-size: 20px;
+}
+
+.box {
+flex: 1;
+background: beige;
+border: 10px;
+margin: 20px 10px;
+box-shadow: 0 3px 5px black;
+padding: 15px 20px;
+}
+
+.About {
+flex: 1;
+background: beige;
+border: 10px;
+margin: 20px 10px;
+box-shadow: 0 3px 5px black;
+padding: 15px 20px;
+height: 600px;
+width: 400px;
+}
+
+.About p {
+    font size: 20px;
+}
+
+.contact {
+
+    background-color: white
+    margin: top: 20px;px
+    height: 400px;
+    display: flex;
+
+}
+
+.contact-box {
+   margin: 50px;
+   float: inline-start;
+   height: 100px;
+}
+
+.form {
+    margin: ;
+    }
+    
+.input-feild {
+    width: 400px;
+    height: 40px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid #777;
+    border-radius: 14px;
+}
+
+.message {
+    height: 150px;
+    padding-top: 10px
+
+}
+
+@media screen and (max-width: 992px) {
+    .header .container {
+      flex-direction: column;
+      padding-top: 20px;
+      width: 50%;
+    }
+
+    .boxes .container {
+        display: block;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .header .container {
+      flex-direction: column;
+      padding-top: 20px;
+      width: 100%;
+    }
+   
+  }
+
+  
