--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ justify-content: space-between;
 align-items: center;
 height: 100%;
 background-color:beige;
+width: 100%;
 
 }
 
@@ -37,6 +38,8 @@ background-color:beige;
     margin-left: 0px;
     display:inline-block;
     list-style-type: style none;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar ul {
@@ -64,6 +67,7 @@ background-color:beige;
     align-items: center;
     justify-content: space-between;
     background-color: cornflowerblue;
+    width: 100%;
 }
 .photo {
 display: flex;
@@ -117,6 +121,7 @@ width: 400px;
     margin: top: 20px;px
     height: 400px;
     display: flex;
+    float: :right;
 
 }
 
