--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,15 @@ box-shadow: 0 3px 5px black;
 padding: 15px 20px;
 }
 
+.box1 {
+    flex: 1;
+    background: beige;
+    border: 10px;
+    margin: 20px 10px;
+    box-shadow: 0 3px 5px black;
+    padding: 15px 20px;
+    }
+
 .About {
 flex: 1;
 background: beige;
